--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-certifi==2020.12.5
-chardet==3.0.4
-click==7.1.2
-Flask==1.1.2
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-requests==2.25.0
-urllib3==1.26.2
-Werkzeug==1.0.1
+certifi
+chardet
+click
+Flask
+idna
+itsdangerous
+Jinja2
+MarkupSafe
+requests
+urllib3
+Werkzeug
 gunicorn
 numpy
 retry
 pandas
+ratelimiter
+sqlalchemy
 -e git+https://github.com/mcmanustfj/ao3.git#egg=ao3
